Updated some minor bugs in css spacing

--- a/css/main.css
+++ b/css/main.css
@@ -30,18 +30,7 @@ body {
 }
 
 #wrapper {
-  min-height: 100%;
   position: relative;
-}
-
-#header {}
-
-#footer {
-  width: 100%;
-  height: 100px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
 
 .navbar {
@@ -75,22 +64,22 @@ body {
 
 .navbar-nav li.active a {
   color: #fff !important;
-  background-color: #29292c !important;
+  background-color: #2d2d30 !important;
 }
 
 .navbar-default .navbar-toggle {
   border-color: transparent;
-  background-color: #29292c !important;
+  background-color: #29292a !important;
 }
 
 .open .dropdown-toggle {
   color: #555;
-  background-color: #29292c !important;
+  background-color: #09090a !important;
 }
 
 .dropdown-menu li a {
   color: #eeeeee !important;
-  background-color: #29292c !important;
+  background-color: #09090a !important;
 }
 
 .dropdown-menu li a:hover {
@@ -99,10 +88,6 @@ body {
 
 .container {
   margin-top: 120px !important;
-}
-
-#projects {
-  margin-top: 40px;
 }
 
 .demo {
@@ -116,27 +101,28 @@ body {
   text-align: center;
   max-width: 100%;
   height: auto;
-  opacity: 0.9;
+  opacity: 1;
   margin-left: auto;
   margin-right: auto;
 }
 
 .proj:hover {
-  opacity: 1;
+  opacity: .87;
 }
 
 #contact {
-  background-color: #29292c;
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  height: 100%;
+  background-color: #19191a;
   color: #ffffff;
   padding-bottom: 90px !important;
-  padding-top: 50px;
-}
-
-footer {
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  top: 65px;
+  padding-top: 20%;
+  display: none;
+  overflow: auto;
 }
 
 
@@ -182,7 +168,7 @@ footer {
   background-color: #007bb6;
   color: #FFFFFF;
   text-indent: -1px;
-}z
+}
 
 #lpill:hover {
   font-weight: bold;
@@ -195,7 +181,7 @@ footer {
   padding-top: 20px;
 }
 
-#projectrow2 {
+#projectrow2 {s
   padding-top: 40px;
 }
 
